# otus.lessons.05.01

./: .gitignore  CMakeLists.txt  otus.lessons.05.01.sln
otus.lessons.05.01/: CMakeLists.txt  Scene.h  global.cpp  global.h  otus.lessons.05.01.cpp  otus.lessons.05.01.vcxproj  otus.lessons.05.01.vcxproj.filters  otus.lessons.05.02.cpp  queue_processor.h  scene.h  scene.h.orig  stdafx.cpp  stdafx.h
